@@ -4,7 +4,7 @@
          UPDATED=20051212
       LICENSE[0]=GPL
        BUILD_API=2
-      PATCHLEVEL=4
+      PATCHLEVEL=5
            SHORT="This is the basic initalization system of SMGL"
 cat << EOF
 This is the basic initalization system of Sourcemage GNU/Linux.
