@@ -1,3 +1,7 @@
+2006-02-26 Jeremy Blosser <jblosser-smgl@firinn.org>
+	* DETAILS: increment PATCHLEVEL
+	* init.d/mountall.sh: s/rek_remove/recursive_rm/
+
 2006-02-25 Jeremy Blosser <jblosser-smgl@firinn.org>
 	* init.d/mountall.conf: fix variable name to match the one used in
 	  mountall.sh
